# heav_faxer

.github/workflows/: cloudrun-server-deploy.yml  development-server.yml  development-website.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase-hosting-website-deploy.yml  production-server.yml  production-website.yml
server/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go
server/db/: db.go
server/links/: links.go
server/src/: db.rs  files.rs  main.rs  rate_limiter.rs  utils.rs
website/: .firebaserc  .gitignore  Cargo.toml  README  README.md  Trunk.toml  convert_pxs_to_rems.py  firebase.json  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
website-qwik/: .prettierrc.yml  package-lock.json  package.json  vite.config.ts
website-qwik/src/: api.ts
website-qwik/src/components/cabinet/: cabinet.scss  drawer.scss  paper.tsx
website-qwik/src/components/fax_machine/: fax_machine.scss
website-qwik/src/components/global_link_modal/: global_link_modal.tsx
website-qwik/src/routes/link/: index.tsx
website-qwik/src/routes/link_not_found/: index.tsx
website-svelte/: package-lock.json  package.json  svelte.config.js
website-svelte/src/routes/: +layout.ts
website-svelte/src/routes/bonjour/: +page.svelte
website/adapters/static/: vite.config.ts
website/assets/: global.scss
website/src/: api.ts  entry.preview.tsx  entry.ssr.tsx  entry.static.tsx  global.css  main.rs  root.tsx
website/src/components/back_button/: back_button.scss  back_button.tsx
website/src/components/button/: button.css  button.scss  button.tsx
website/src/components/cabinet/: cabinet.scss  (+9 more)
website/src/hooks/: use_hovering.ts
website/src/routes/: +page.svelte  index.css  index.scss  index.tsx  layout.tsx
website/src/styles/: global.css
website/src/utils/: mountOnBody.ts  useTypedContext.ts
(+26 files in other folders)
