[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bson = "2.6.1"
either = "1.8.1"
mongodb = "2.6.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
url = "2.4.0"
